fix issue with results not showing.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,16 @@
 #vegas {
   display: none;
+  margin: 100px;
 }
 #vancouver {
   display: none;
+  margin: 100px;
 }
 #costarica {
   display: none;
+  margin: 100px;
 }
 #finland {
   display: none;
+  margin: 100px;
 }
